...
                android:text="@string/ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/servings_element"
                layout="@layout/servings"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/recipe_info_headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/recipe_info_headline" />

            <de.hs_rm.recipe_me.ui.component.UnscrollableListView
                android:id="@+id/ingredients_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_space"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:listSelector="@android:color/transparent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredients_list_view">

                <ImageButton
                    android:id="@+id/add_to_shopping_list_button"
                    style="@style/small_circle_button"
                    android:layout_marginVertical="@dimen/small_space"
                    android:contentDescription="@string/add_to_shopping_list"
                    android:src="@drawable/ic_baseline_shopping_basket_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tooltipTextCompat="@{@string/add_to_shopping_list}"
                    tools:visibility="gone" />

                <ImageButton
                    android:id="@+id/to_shopping_list_cancel_button"
                    style="@style/small_circle_button"
                    android:layout_marginVertical="@dimen/small_space"
                    android:background="@drawable/round_button_2dp"
                    android:contentDescription="@string/cancel"
                    android:src="@drawable/ic_baseline_clear_24"
                    android:tint="?attr/colorPrimaryVariant"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tooltipTextCompat="@{@string/cancel}"
                    tools:visibility="visible" />

                <ImageButton
                    android:id="@+id/to_shopping_list_accept_button"
                    style="@style/small_circle_button"
                    android:layout_marginVertical="@dimen/small_space"
                    android:layout_marginStart="@dimen/default_space"
                    android:contentDescription="@string/add_to_shopping_list"
                    android:src="@drawable/ic_baseline_check_24"
                    android:visibility="gone"
...
                    app:tooltipTextCompat="@{@string/add_to_shopping_list}"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/cooking_steps_headline"
                style="@style/headline_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_below_headline_1"
                android:text="@string/steps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shopping_list_button_wrapper" />

            <TextView
                android:id="@+id/cooking_steps_text"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cooking_steps_headline"
...
