<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipe_detail_layout"
        android:layout_width="match_parent"
        android:background="?attr/colorOnPrimary"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/scroll_view_image_offset_low" />

        <ImageView
            android:id="@+id/recipe_detail_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline_imageview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/category_baked_goods" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintBottom_toTopOf="@+id/guideline_imageview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_elements_wrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scroll_view_offset_low"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/edit_recipe_button"
                style="@style/header_button"
                android:contentDescription="@string/edit_recipe"
                android:src="@drawable/ic_baseline_edit_24"
                android:tint="@color/white"
                app:tooltipTextCompat="@{@string/edit_recipe}"
                app:layout_constraintBottom_toBottomOf="@id/recipe_detail_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/recipe_detail_name"
                app:layout_constraintTop_toTopOf="@id/recipe_detail_name" />

            <include
                android:id="@+id/recipe_detail_name"
                layout="@layout/image_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/edit_recipe_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/to_cooking_steps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_cook_recipe"
            android:src="@drawable/ic_chef_hat"
            app:tooltipTextCompat="@{@string/desc_cook_recipe}"
            app:backgroundTint="@color/dark_red"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            app:useCompatPadding="true" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Dummy to let proper view start with offset-->
                <View
                    android:id="@+id/dummy_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/scroll_view_offset_low" />

                <include
                    android:id="@+id/recipe_info"
                    layout="@layout/recipe_information" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
