...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:paddingVertical="8dp">

        <CheckBox
            android:id="@+id/item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginVertical="0dp"
            android:layout_marginEnd="10dp"
            android:button="@drawable/checkbox_selector"
            android:buttonTint="?attr/colorOnSecondary"
...
            app:layout_constraintTop_toTopOf="parent"
            tools:checked="true"
            tools:text="‎"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/ingredient_text_view"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:ellipsize="end"
            android:maxLines="1"
...
